tests/ui/issues/issue-27433.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/issue-27433.rs:5:23
   |
LL |     const FOO : u32 = foo;
   |                       ^^^ non-constant value
   |
help: consider using `let` instead of `const`
   |
LL -     const FOO : u32 = foo;
LL +     let FOO : u32 = foo;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0435`.
